[tool.poetry]
name        = "osbot_aws"
version     = "v2.37.16"
description = "OWASP Security Bot - AWS"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/owasp-sbot/OSBot-AWS"
repository  = "https://github.com/owasp-sbot/OSBot-AWS"

[tool.poetry.dependencies]
python          = "^3.7"
boto3           = "*"
osbot-utils     = "*"

[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
